Allowed the Companion sidepane to be toggled.

--- a/src/extension/skin/overlay.css
+++ b/src/extension/skin/overlay.css
@@ -4,14 +4,17 @@
   color: red ! important;
 }
 
-#companion-sidePane {
-	width: 200px;
-}
-
 listbox.companion-pageSession-activatingStagePage-logList {
 	border-top-style:      none;
 	border-bottom-style:   none;
 	border-left-style:     none;
 	border-right-style:    none;
 	background-color:      transparent;
+}
+
+#companion-sidePaneSplitter {
+}
+
+#companion-sidePane {
+	width: 				200px;
 }
