--- a/src/extension/skin/overlay.css
+++ b/src/extension/skin/overlay.css
@@ -1,8 +1,4 @@
-/* This is just an example.  You shouldn't do this. */
-#companion-hello
-{
-  color: red ! important;
-}
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 listbox.companion-pageSession-activatingStagePage-logList {
 	border-top-style:      none;
@@ -16,5 +12,27 @@ listbox.companion-pageSession-activatingStagePage-logList {
 }
 
 #companion-sidePane {
-	width: 				200px;
+	width: 	200px;
 }
+
+.companion-typeFacet {
+	height: 17em;
+}
+
+splitter.companion-facetContainer-splitter {
+    border-top: none;
+    border-bottom: none;
+}
+
+.companion-facet-header label {
+}
+
+tree.companion-facet-valuesContainer {
+    margin: 0;
+    padding: 0;
+    border-top-style: none;
+    border-bottom-style: none;
+    border-left-style: none;
+    border-right-style: none;
+}
+
