--- a/trunk/src/extension/skin/overlay-html.css
+++ b/trunk/src/extension/skin/overlay-html.css
@@ -7,9 +7,12 @@ a {
 }
 
 div.companion-facet-quickFilter {
-    padding:    2px;
-    margin:     2px 0px;
-    background: white;
+    -moz-appearance: textfield;
+    margin-bottom:   2px;
+}
+
+div.companion-facet-quickFilter div {
+    padding-bottom:  2px;
 }
 
 div.companion-facet-quickFilter input {
