Made the facet panel look better and scrollable.

--- a/src/extension/skin/overlay-html.css
+++ b/src/extension/skin/overlay-html.css
@@ -6,25 +6,6 @@ a {
     cursor: pointer;
 }
 
-div.companion-facet-quickFilter {
-    -moz-appearance: textfield;
-    margin-bottom:   2px;
-}
-
-div.companion-facet-quickFilter div {
-    padding-bottom:  2px;
-}
-
-div.companion-facet-quickFilter input {
-    border:     none;
-    font-size:  8pt;
-    width:      100%;
-}
-
-div.companion-facet-quickFilter input.companion-hintedTextbox-empty {
-    color:  #aaa;
-}
-
-span.companion-facet-header-label {
-    font-weight: bold;
+div.facet {
+    display: block;
 }
