Implemented the find news feature and the browse topics alone feature. Some styling changes.

--- a/src/extension/skin/overlay-html.css
+++ b/src/extension/skin/overlay-html.css
@@ -9,3 +9,15 @@ a {
 div.facet {
     display: block;
 }
+
+.pivot-pane-header {
+    margin-top: 0px;
+}
+
+div.pivot-pane-footer {
+    border-top: none;
+}
+
+div.facet-pane-controls {
+    border-top: none;
+}
